--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,13 +6,13 @@ $font-stack: laca, sans-serif;
     justify-content: center;
     align-self: center;
     width: 100%;
-    background-color: #0C4BFA;
     padding-bottom: 300px;
+    transition: background .50s ease-out
 }
 
 .cardContent {
     width: 45rem;
-    margin-top: 150px; // towa trqbwa da se promeni zadyljitelno
+    margin-top: 100px;
     padding-bottom: 10px;
     border-radius: 25px;
     background-color: white;
