feat: add homepage and questions page

--- a/src/components/Header/QuestionCount.module.scss
+++ b/src/components/Header/QuestionCount.module.scss
@@ -4,7 +4,7 @@ $font-stack: laca, sans-serif;
 .container {
     text-align: center;
     display: block;
-    background-color: #0C4BFA;;
+    background-color: #0C4BFA;
 }
 
 .counter, .questions {
